meta-window-actor: Don't add shadows to popups if the toolkit already does

GTK+ will add its own shadows client-side, so we don't need to anymore.

https://bugzilla.gnome.org/show_bug.cgi?id=731353